Promoter placegolder images. Also fix some vertical alignments.

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -491,6 +491,7 @@ button:before {
   position: relative;
   overflow: visible;
   white-space: normal;
+  vertical-align: top;
   
   color: $font-body-color;
   
